--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -6,12 +6,13 @@
 
 {% block content %}
   {% cache 20 index_page page_obj.number %}
+  {% include 'posts/includes/switcher.html' %}
   <!-- класс py-5 создает отступы сверху и снизу блока -->
   <div class="container py-5">
     {% for post in page_obj %}
       {% include 'includes/user_article.html' %}
   <!--      check if there is a group related to the post-->
-      {% if post.group.slug != NULL %}
+      {% if post.group.slug != NULL %}  <!-- TODO try to delete .slug != NULL -->
         <a href="{% url 'posts:group_list' post.group.slug %}">Все записи группы</a>
       {% endif %}
   <!--      no line under the last post-->
