--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -3,8 +3,8 @@
 {% extends 'base.html' %}
 {% block title %}Профиль пользователя{% endblock %}
 {% block header %}Профиль пользователя{% endblock %}
-{% block content %}
 
+{% block content %}
 <div class="container py-5">
     {% if author.get_full_name %}
       <h1>Все посты пользователя {{ author.get_full_name }}</h1>
@@ -12,6 +12,21 @@
       <h1>Все посты пользователя {{ author.username }}</h1>
     {% endif %}
   <h3>Всего постов: {{ posts.count }} </h3>
+    {% if following %}
+    <a
+      class="btn btn-lg btn-light"
+      href="{% url 'posts:profile_unfollow' author.username %}" role="button"
+    >
+      Отписаться
+    </a>
+  {% else %}
+      <a
+        class="btn btn-lg btn-primary"
+        href="{% url 'posts:profile_follow' author.username %}" role="button"
+      >
+        Подписаться
+      </a>
+   {% endif %}
     {% for post in page_obj %}
     {% include 'includes/user_article.html' %}
     <!-- no line under the last post -->
