--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -12,6 +12,7 @@
       <h1>Все посты пользователя {{ author.username }}</h1>
     {% endif %}
   <h3>Всего постов: {{ posts.count }} </h3>
+    {% if author != user %}
     {% if following %}
     <a
       class="btn btn-lg btn-light"
@@ -27,6 +28,7 @@
         Подписаться
       </a>
    {% endif %}
+  {% endif %}
     {% for post in page_obj %}
     {% include 'includes/user_article.html' %}
     <!-- no line under the last post -->
