--- a/yatube/templates/core/403.html
+++ b/yatube/templates/core/403.html
@@ -3,5 +3,7 @@
 {% extends "base.html" %}
 {% block title %}Custom 403{% endblock %}
 {% block content %}
-    <h1>Custom 403</h1>
+  <h1>Custom 403</h1>
+  <p>Неправильный запрос к сайту</p>
+  <a href="{% url 'posts:index' %}"> Идите на главную</a>
 {% endblock %}
